<resources>
    <string name="app_name">EnviroNode Viewer</string>
    <string name="bt_unaavailble">Bluetooth is not available</string>
    <string name="title_paired_devices">PAIRED DEVICES</string>
    <string name="title_other_devices">DISCOVERED DEVICES</string>
    <string name="button_scan">scan_btn</string>
    <string name="no_paired_devices">No paired devices found</string>
    <string name="no_discovered_device">No devices discovered</string>
    <string name="device_detail">device clicked:</string>
    <string name="discovery_error">An error has occurred whilst trying to make your device discoverable</string>
    <string name="connectable">Host device is in discoverable mode.</string>
    <string name="connectable_discoverable">Host device is not in discoverable mode but can still receive connections.</string>
    <string name="not_connected">You are not connected to any device!</string>
    <string name="title_connected">State: Connected to  </string>
    <string name="title_connecting">STATE: Connecting...</string>
    <string name="title_disconnected">STATE: Not Connected</string>
    <string name="toast_unable_to_connect">Unable to connect device</string>
    <string name="toast_connection_lost">Your device is disconnected</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="plot">Plot Data</string>
    <string name="plot_line">Plot Line Graph</string>
    <string name="plot_bar">Plot Bar Graph</string>
    <string name="plot_pie">Plot Pie Graph</string>
    <string name="plot_mulitple">Plot Multiple Graphs</string>
    <string name="dateandtime">Date and Time</string>
    <string name="weight">Weight (g)</string>
    <string name="please_wait">Please wait...</string>
    <string name="http_fail">Error fetching data</string>
    <string name="view_existing_data">View Existing Data</string>
    <string name="connect_to_device">Connect to Device</string>
    <string name="title_activity_login">Sign in</string>
    <string name="api_key_string">Your Key...</string>
    <string name="go">GO</string>
    <string name="back">Back</string>
    <string name="api_dialog_message">Please enter your Key</string>
    <string name="your_sites">Your Sites:</string>
    <string name="key">Enter Key:</string>
    <string name="search">Search</string>
    <string name="serial">Serial:</string>
    <string name="battery_voltage_v">Battery Voltage (V):</string>
    <string name="dashboard_for">Dashboard for:</string>
    <string name="volts">  V</string>
    <string name="http_error">Not able to fetch data from server, please check url</string>
    <string name="url_unrecognised">URL not recognised, please try again</string>
    <string name="no_sites">There are no sites to display</string>
    <string name="no_hubs">No HUbs to Display</string>
    <string name="select_channel">You must select a site, a hub, an instrument and some channels to view data.</string>
    <string name="select_a_site">Select a Site:</string>
    <string name="select_a_hub">Select a Hub:</string>
    <string name="select_an_instrument">Select an Instrument:</string>
    <string name="select_channel_s">Select Channel(s):</string>
    <string name="no_data_exists">No data exists for these channels on these dates, please try again.</string>
    <string name="cannot_plot">Unable to plot these values, please select other dates or channels.</string>
    <string name="server_unavailable">Unfortunately, the server is unavailable at this time. Please try again later.</string>
    <string name="invalid_date_range">Invalid date range, please try again.</string>
    <string name="try_again">An error ocurred, please try again.</string>
    <string name="last24">Last 24 Hours</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="last_month">Last Month</string>
    <string name="last_year">Last Year</string>
    <string name="select_date_and_time_range">Select Date and TIme Range:</string>
    <string name="or_select_a_range_below">OR - select a range below:</string>
    <string name="select_ch">Select Channel:</string>
    <string name="aml_serial">AML Serial Number:</string>
    <string name="dashboardTv">Instrument Dashboard</string>
    <string name="latest_upload_tv">Latest Upload:</string>
    <string name="title_activity_btaml_dashboard">BTAmlDashboardActivity</string>
    <string name="battery_temperature_deg_c">Battery Temperature (Deg. C)</string>
    <string name="_0_0v">0.0V</string>
    <string name="_0">0</string>
    <string name="date">date...</string>
    <string name="latest_upload">Latest Upload:</string>
    <string name="batt_data_error">Error fetching battery data, trying again..</string>
    <string name="ext_data_error">Error fetching external supply data, trying again..</string>
    <string name="f0000000">F0000000</string>
    <string name="unit_name">Unit Name</string>
    <string name="set_unit_name">Unit Name:</string>
    <string name="set_unit_comment">Unit Comment:</string>
    <string name="unit_comment">Unit Comment</string>
    <string name="dashes">--</string>
    <string name="live_dialogue_title">Go into live mode?</string>
    <string name="battery_v">Battery Voltage</string>
    <string name="channel_name">Channel Name</string>
    <string name="supply_current">Supply Current (mA)</string>
    <string name="internal_temperature_deg_c">Internal Temperature (Deg. C)</string>
    <string name="supply_voltage_v">Supply Voltage (V)</string>
    <string name="internal_pressure_mbar">Internal Pressure (mbar)</string>
    <string name="connected_to">Connected to:</string>
    <string name="aml_connected">Your Device is Connected</string>
    <string name="aml_connecting">Your Device is Connecting</string>
    <string name="aml_not_connected">No Device is Connected</string>
    <string name="re_connected">Your device was re-connected</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="device_conn_fail">Cannot connect to this device at this time</string>
    <string name="sensor_channel_5">Sensor Channel 5</string>
    <string name="sensor_channel_4">Sensor Channel 4</string>
    <string name="sensor_channel_3">Sensor Channel 3</string>
    <string name="soil_temperature">Soil Temperature</string>
    <string name="volumetric_water_content">Volumetric Water Content</string>
    <string name="volumetric_soil_moisture">Volumetric Soil Moisture</string>


</resources>
