<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/amlDashTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dashboardTv"
            android:textSize="36sp"
            android:textStyle="bold" />
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/set_unit_name"
                android:textSize="26sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/unitNameTv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/dashes"
                android:textSize="26sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/set_unit_comment"
                android:textSize="26sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/unitCommentTv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/dashes"
                android:textSize="26sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/aml_serial"
                android:textSize="26sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/amlSerialTv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/dashes"
                android:textSize="26sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/latestUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/amlDashTitle"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:src="@drawable/cloud_upload" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/latest_upload"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/uploadDateTv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:hint="@string/date" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton

        android:src="@mipmap/ic_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="11dp"
        android:id="@+id/refreshBtn" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latestUpload"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="5dp"

            android:id="@+id/spacer1"/>


        <LinearLayout
            android:id="@+id/icons1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spacer1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/battIv"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/battery_icon" />

            <ImageView
                android:id="@+id/battTempIv"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:src="@drawable/batt_temp" />

            <ImageView
                android:id="@+id/solarIv"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/solar_round" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/info1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icons1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/battVEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/battery_voltage_v"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/battery_temperature_deg_c"
                android:textAlignment="center"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/solarEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Supply Voltage (V)"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/results1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/battVTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:hint="@string/_0"/>
            <TextView
                android:id="@+id/battTempTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:hint="@string/_0"/>
            <TextView
                android:id="@+id/supplyVTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:hint="@string/_0"/>
        </LinearLayout>





    </RelativeLayout>

    <Button
        android:text="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="65dp"
        android:layout_marginEnd="65dp"
        android:id="@+id/testBtn"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/refreshBtn"
        android:layout_toStartOf="@+id/refreshBtn" />


</RelativeLayout>
